--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -10,7 +10,7 @@
     Send a message!
     <%= form_tag('/message', remote: true) do %>
       <div class="form-group">
-        <%= text_field_tag 'message',nil, :class => 'form-control' %> <br>
+        <%= text_field_tag 'message',nil, :class => 'form-control', :id => "input", :onSubmit => "$('#input').empty()" %> <br>
       </div>
       <div class="form-group">
         <%= button_tag("Send", data: { disable_with: "Sending...", remote: true }, :class => 'btn btn-default') %>
