--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -16,7 +16,7 @@
         <%= text_field_tag 'message',nil, :class => 'form-control', :id => "input" %> <br>
       </div>
       <div class="form-group">
-        <%= button_tag("Send", data: { disable_with: "Sending...", remote: true }, :class => 'btn btn-default send') %>
+        <%= button_tag("Send", data: { disable_with: "<img src='http://i.stack.imgur.com/MnyxU.gif' width='10%'>", remote: true }, :class => 'btn btn-default send') %>
       </div>
     <% end %>
     <%= form_tag('/message/clear', remote: true) do %>
