--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the site controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.post {
+  border-radius: 15px;
+
+}
+.post-body {
+  background-color: rgba(230,224,224,0.9);
+  box-shadow: 3px 3px 5px black;
+}
+body {
+  background-color: rgba(243,187,187,0.8);
+}
+.border {
+  border: 2px solid black;
+}
