--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,3 +1,20 @@
+<header>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <div class="navbar-header">
+       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+       </button>
+       <a class="navbar-brand" href="#">Get My Car</a>
+     </div>
+      </div>
+    </div>
+  </nav>
+</header>
 <div class="container">
   <div class="row">
       <div class="col-lg-12">
@@ -6,15 +23,19 @@
       </div>
   </div>
 <div class="row">
-  <div class="col-lg-6">
+  <div class="col-lg-4 border">
     <%=  react_component('MessageBox', props = {url: '/messages', pollInterval: 3000})  %>
   </div>
-  <div class="col-lg-6">
-    Send a message!
+  <div class="col-lg-4 border">
+  </div>
+  <div class="col-lg-4 border">
     <%= form_tag('/message', remote: true) do %>
       <div class="form-group">
-        <%= text_field_tag 'message',nil, :class => 'form-control', :id => "input" %> <br>
+        <label>Enter a message and help the cause!</label>
+        <%= text_field_tag 'title',nil, :class => 'form-control', :id => "subject", :placeholder => "Subject", data: { disable_with: "Sending..."} %>
+        <%= text_area_tag 'message',nil, :class => 'form-control', :id => "message", :placeholder => "Message",data: { disable_with: "Sending..."} %>
       </div>
+
       <div class="form-group">
         <%= button_tag("Send", data: { disable_with: "<img src='http://i.stack.imgur.com/MnyxU.gif' width='10%'>", remote: true }, :class => 'btn btn-default send') %>
       </div>
