--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -37,7 +37,7 @@
       </div>
 
       <div class="form-group">
-        <%= button_tag("Send", data: { disable_with: "<img src='http://i.stack.imgur.com/MnyxU.gif' width='10%'>", remote: true }, :class => 'btn btn-default send') %>
+        <%= button_tag("Send", data: { disable_with: "<img src='https://i.stack.imgur.com/MnyxU.gif' width='10%'>", remote: true }, :class => 'btn btn-default send') %>
       </div>
     <% end %>
     <%= form_tag('/message/clear', remote: true) do %>
