--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -29,7 +29,7 @@
   </div>
 <div class="row">
   <div class="col-lg-8">
-    <%=  react_component('MessageBox', props = {url: '/messages', pollInterval: 10000, :user_id => current_user.id} )  %>
+    <%=  react_component('MessageBox', props = {url: '/messages', pollInterval: 1000, :user_id => current_user.id} )  %>
   </div>
   <div class="col-lg-4">
     <%= form_tag('/message', remote: true) do %>
@@ -48,3 +48,18 @@
     <% end %>
   </div>
 </div>
+<script>
+$(document).ready(function()
+{
+    $(window).bind("beforeunload", function() {
+      $.post('/presence/sign_out/' + <%= current_user.id %> )
+      console.log('Logged out')
+    });
+});
+window.onbeforeload = this.loginUser();
+function loginUser() {
+  $.post('/presence/sign_in/' + <%= current_user.id %> )
+  console.log('Logged in')
+}
+
+</script>
